# Airports_project

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  dockerfile  pyproject.toml  req.txt
app/: db_connection.py  main.py
app/api/: router_v1.py  router_v2.py  v2.py
app/api/endpoints/v1/: aircrafts.py  airports.py  boarding_passes.py  flights.py
app/api/endpoints/v2/: aircrafts.py  airports.py  flights.py  seats.py  tickets.py
app/config/: settings.py
app/models/: base.py  enums.py  models.py
app/schemas/: aircrafts.py  airports.py  base.py  boarding_passes.py  flights.py  mixin.py  seats.py  tickets.py
app/tests/: conftest.py
app/tests/fixtures/: data_fixtures.py
app/tests/test_api_v1/: test_aircrafts_v1.py
migrations/: env.py
migrations/versions/: a906e929ec22_initial_state.py
тесты_МОЩНЫЙ_ПИТОН/: file_for_codetest.py
я_саша_секунды/: sasha-time.py
