[project]
name = "airports-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "fastapi-pagination>=0.15.7",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = ["ruff<1.0.0,>=0.2.2", "mypy<2.0.0,>=1.8.0", "types-pyyaml>=6.0.12.20250915", "black>=25.1.0", "pre-commit<4.0.0,>=3.6.2"]
test = ["pytest<8.0.0,>=7.4.3", "coverage<8.0.0,>=7.4.3"]

[tool.mypy]
strict = true
exclude = ["venv", ".venv", "alembic"]

[tool.ruff]
line-length = 120  # Устанавливаем максимальную длину строки в 120 символов
target-version = "py310"
exclude = ["venv", ".venv", "alembic"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG001", # unused arguments in functions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "W191",  # indentation contains tabs
    "B904",  # Allow raising exceptions without from e, for HTTPException
]

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[tool.ruff.format]
quote-style = "double"  # Всегда использовать двойные кавычки
indent-style = "space"  # Использовать пробелы вместо табов (tab)
line-ending = "lf"  # Использовать Unix-стиль переносов строк

[tool.ruff.lint.isort]
length-sort-straight = true
from-first = false
lines-after-imports = 2
lines-between-types = 1
known-local-folder = ["app", "tests"]
known-first-party = ["fastapi", "pydantic", "starlette", "strawberry", "graphql", "sqlalchemy", "asyncpg", "httpx"]
known-third-party = ["fastapi_pagination"]
section-order = [
    "future",
    "standard-library",
    "first-party",
    "third-party",
    "local-folder",
]
[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 7
